--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## 📋 Table of Contents",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
